Positions Manager 0.1 - Configured to use Testcontainers, Postgresql and Flywire (and not reuse containers) - Configured to generate interface (REST) from OpenApi definition - Operation getAllPositions - happy path
