# project/recruiters/backend/services/positions-manager-service/src/main/java/com/jaruiz/casarrubios/recruiters/services/posmanager/adapters/persistence/repository/entities/PositionEntity.java
@@ -1,5 +1,6 @@
 package com.jaruiz.casarrubios.recruiters.services.posmanager.adapters.persistence.repository.entities;
 
+import java.time.LocalDateTime;
 import java.util.List;
 
 import jakarta.persistence.*;
@@ -13,12 +14,20 @@ public class PositionEntity {
     private Long id;
     private String title;
     private String description;
+    private int status;
+    @Column(name = "created_at")
+    private LocalDateTime createdAt;
+    @Column(name = "published_at")
+    private LocalDateTime publishedAt;
 
     @OneToMany(mappedBy = "position", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     private List<RequirementEntity> requirements;
 
     @OneToMany(mappedBy = "position", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
-    private List<ConditionEntity> conditions;
+    private List<BenefitEntity> benefits;
+
+    @OneToMany(mappedBy = "position", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
+    private List<TaskEntity> tasks;
 
     public Long getId() {
         return id;
@@ -44,6 +53,30 @@ public class PositionEntity {
         this.description = description;
     }
 
+    public int getStatus() {
+        return status;
+    }
+
+    public void setStatus(int status) {
+        this.status = status;
+    }
+
+    public LocalDateTime getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(LocalDateTime createdAt) {
+        this.createdAt = createdAt;
+    }
+
+    public LocalDateTime getPublishedAt() {
+        return publishedAt;
+    }
+
+    public void setPublishedAt(LocalDateTime publishedAt) {
+        this.publishedAt = publishedAt;
+    }
+
     public List<RequirementEntity> getRequirements() {
         return requirements;
     }
@@ -52,11 +85,19 @@ public class PositionEntity {
         this.requirements = requirements;
     }
 
-    public List<ConditionEntity> getConditions() {
-        return conditions;
+    public List<BenefitEntity> getBenefits() {
+        return benefits;
     }
 
-    public void setConditions(List<ConditionEntity> conditions) {
-        this.conditions = conditions;
+    public void setBenefits(List<BenefitEntity> conditions) {
+        this.benefits = conditions;
+    }
+
+    public List<TaskEntity> getTasks() {
+        return tasks;
+    }
+
+    public void setTasks(List<TaskEntity> tasks) {
+        this.tasks = tasks;
     }
 }
