# project/recruiters/backend/services/positions-manager-service/src/main/resources/openapi/positions-manager-service-openapi.yaml
@@ -161,22 +161,41 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/RequirementDTO'
-        conditions:
+        benefits:
           type: array
           items:
-            $ref: '#/components/schemas/ConditionDTO'
+            $ref: '#/components/schemas/BenefitDTO'
+        tasks:
+          type: array
+          items:
+            $ref: '#/components/schemas/TaskDTO'
     RequirementDTO:
       type: object
       properties:
+        key:
+          type: string
+          example: Java
+        value:
+          type: string
+          example: 10 years of experience
         description:
           type: string
           example: The candidate must have a degree in computer science
-    ConditionDTO:
+        isMandatory:
+          type: boolean
+          example: true
+    BenefitDTO:
       type: object
       properties:
         description:
           type: string
-          example: The candidate must have a degree in computer science
+          example: 23 days of vacation
+    TaskDTO:
+      type: object
+      properties:
+        description:
+          type: string
+          example: Design technical solutions
     ApplicationErrorDTO:
       type: object
       properties:
